--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,12 +40,16 @@ jobs:
         gpg -d -o "$PROV_FILE" --pinentry-mode=loopback --passphrase "$CERT_PASS" "$PROV_FILE_GPG"
 
         security create-keychain -p "" "$KEYCHAIN_FILE"
-        security list-keychains -d user -s "$KEYCHAIN_FILE"
+        #security list-keychains -d user -s "$KEYCHAIN_FILE"
+        security list-keychains -d user -s "$KEYCHAIN_FILE" $(security list-keychains -d user | tr -d '"')
         #security set-keychain-settings -lut 21600 "$KEYCHAIN_FILE"
         security set-keychain-settings "$KEYCHAIN_FILE"
-        security import "$CERT_FILE" -P "$CERT_PASS" -A -t cert -f pkcs12 -k "$KEYCHAIN_FILE"
-        security default-keychain -s "$KEYCHAIN_FILE"
+        #security import "$CERT_FILE" -P "$CERT_PASS" -A -t cert -f pkcs12 -k "$KEYCHAIN_FILE"
+	security import "$CERT_FILE" -k "$KEYCHAIN_FILE" -P "" -T "/usr/bin/codesign"
+        #security default-keychain -s "$KEYCHAIN_FILE"
+	security default-keychain -d user -s "$KEYCHAIN_FILE"
         security unlock-keychain -p "" "$KEYCHAIN_FILE"
+	security find-identity -v -p codesigning
 
         mkdir -p "~/Library/MobileDevice/Provisioning Profiles"
         cp "$PROV_FILE" "~/Library/MobileDevice/Provisioning Profiles"
@@ -58,7 +62,14 @@ jobs:
         cd ios
         pod install --repo-update
 
-        #xcodebuild archive -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -configuration release -archivePath "$XCODE_SCHEME.xcarchive"
-        #xcodebuild archive -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -configuration AppStoreDistribution -archivePath "$XCODE_SCHEME.xcarchive"
-	xcodebuild archive -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -archivePath "$XCODE_SCHEME.xcarchive"
+        xcodebuild archive -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -configuration release -archivePath "$XCODE_SCHEME.xcarchive"
         #xcodebuild build -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+
+    - name: Export for App Store
+      run: | 
+        xcodebuild -exportArchive -archivePath "$XCODE_SCHEME.xcarchive" -exportOptionsPlist ExportOptions.Plist -exportPath "$XCODE_EXPORT_PATH"
+    - name: Upload Artifact 
+      uses: actions/upload-artifact@v2 
+      with: 
+        name: Artifacts 
+        path: ./artifacts
