--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         #security set-keychain-settings -lut 21600 "$KEYCHAIN_FILE"
         security set-keychain-settings "$KEYCHAIN_FILE"
         #security import "$CERT_FILE" -P "$CERT_PASS" -A -t cert -f pkcs12 -k "$KEYCHAIN_FILE"
-        security import "$CERT_FILE" -k "$KEYCHAIN_FILE" -P "" -T "/usr/bin/codesign"
+        security import "$CERT_FILE" -k "$KEYCHAIN_FILE" -P "$CERT_PASS" -T "/usr/bin/codesign"
         #security default-keychain -s "$KEYCHAIN_FILE"
         security default-keychain -d user -s "$KEYCHAIN_FILE"
         security unlock-keychain -p "" "$KEYCHAIN_FILE"
@@ -73,4 +73,3 @@ jobs:
       with: 
         name: Artifacts 
         path: ./artifacts
-
