--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,21 +24,30 @@ jobs:
     steps:
     - name: Select latest Xcode
       run: "sudo xcode-select -s /Applications/Xcode_$XCODE_VERSION.app"
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
+
+    - name: checkout
+      uses: actions/checkout@v2
+
+    - name: configure node
+      uses: actions/setup-node@v1
       with:
         node-version: "12.x"
-    #- uses: actions/setup-ruby@v1
-    #  with:
-    #    ruby-version: "2.x"
+
+    - name: configure ruby
+      uses: actions/setup-ruby@v1
+      with:
+        ruby-version: "2.x"
+
     - name: install fastlane & plugins
       run: bundle install
+
     #- name: Run Unit and UI Tests 
     #  run: |
     #    cd ios
     #    /usr/bin/xcodebuild test -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -destination 'platform=iOS Simulator,name=iPhone 11'
     #    cd ..
-    - name: Set up Codesign
+
+    - name: configure codesign
       run: |
         gpg -d -o "$CERT_FILE" --pinentry-mode=loopback --passphrase "$CERT_PASS" "$CERT_FILE_GPG"
         gpg -d -o "$PROV_FILE" --pinentry-mode=loopback --passphrase "$CERT_PASS" "$PROV_FILE_GPG"
