--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - name: Init
-        run: xcode-select --install
+        run: sudo xcode-select --install
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
