--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Example iOS Build
 
-on:
+on: 
   push:
     branches: [main]
 
@@ -8,27 +8,13 @@ jobs:
   build-ios:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: configure node
-        uses: actions/setup-node@v1
-        with:
-          node-version: "12.x"
-          registry-url: "https://registry.npmjs.org"
+      #- uses: actions/checkout@v2
       
       - name: configure ruby
-        uses: ruby/setup-ruby@master
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.6
-
-      - name: create macos keychain
-        uses: sinoru/actions-setup-keychain@v1.0
 
       - name: install fastlane & plugins
         run: bundle install
       
-      - name: homebrew & watchman
-        run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)" && brew update && brew install watchman
-
-      - name: yarn install
-        run: yarn install
