--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,8 @@ jobs:
   build-ios:
     runs-on: macos-latest
     steps:
-      #- uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       
-      - name: configure ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.6
-
-      - name: install fastlane & plugins
-        run: bundle install
+      - name: Build
+        run: fastlane run build_app
       
