--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,77 @@
-name: Example iOS Build
-
+name: react-native-ios-build-ipa
 on: 
   push:
     branches: [main]
-
 jobs:
-  build-ios:
-    runs-on: macos-latest
+  build:
+    runs-on: [macos-latest]
+    env:
+      XCODE_VERSION: ${{ '11.4.1' }}
+      XCODE_PROJECT: ${{ 'Test1.xcodeproj' }}
+      XCODE_SCHEME: ${{ 'Test1' }}
+      XCODE_EXPORT_PATH: ${{ './artifacts' }}
+
+      KEYCHAIN_FILE: ${{ 'temporary.keychain' }}
+
+      CERT_FILE: ${{ '.github/secrets/ios_distribution.p12' }}
+      PROV_FILE: ${{ '.github/secrets/Test1.mobileprovision'}}
+      CERT_FILE_GPG: ${{ '.github/secrets/ios_distribution.p12.gpg' }}
+      PROV_FILE_GPG: ${{ '.github/secrets/Test1.mobileprovision.gpg'}}
+
+      CERT_PASS: ${{ secrets.CERTS_PWD }}
     steps:
-      - uses: actions/checkout@v2
-      
+    #- name: Select latest Xcode
+    #  run: sudo xcode-select -s /Applications/Xcode_$XCODE_VERSION.app
+
+    - name: checkout
+      uses: actions/checkout@v2
+    
+    #- name: install node
+    #  uses: actions/setup-node@v1
+    #  with:
+    #    node-version: "12.x"
+
+    #- name: install ruby
+    #  uses: actions/setup-ruby@v1
+    #  with:
+    #    ruby-version: "2.x"
+
+    - name: install package
+      run: |
+        npm install
+        cd ios
+        pod install --repo-update
+        cd ..
+        #npx react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios
+
+    #- name: install fastlane
+    #  run: bundle install
+    
+    #- name: Run Unit and UI Tests 
+    #  run: |
+    #    cd ios
+    #    /usr/bin/xcodebuild test -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -destination 'platform=iOS Simulator,name=iPhone 11'
+    #    cd ..
+
+    - name: install codesign
+      run: |
+        gpg -d -o "$CERT_FILE" --pinentry-mode=loopback --passphrase "$CERT_PASS" "$CERT_FILE_GPG"
+        gpg -d -o "$PROV_FILE" --pinentry-mode=loopback --passphrase "$CERT_PASS" "$PROV_FILE_GPG"
+
+        security create-keychain -p "" "$KEYCHAIN_FILE"
+        security list-keychains -s "$KEYCHAIN_FILE"
+        security default-keychain -s "$KEYCHAIN_FILE"
+        security unlock-keychain -p "" "$KEYCHAIN_FILE"
+        security set-keychain-settings
+        #security set-keychain-settings "$KEYCHAIN_FILE"
+        #security import "$CERT_FILE" -k "$KEYCHAIN_FILE" -P "$CERT_PASS" -T "/usr/bin/codesign"
+        #security set-key-partition-list -S apple-tool:,apple: -s -k "" "$KEYCHAIN_FILE"
+
+        mkdir -p "~/Library/MobileDevice/Provisioning Profiles"
+        cp "$PROV_FILE" "~/Library/MobileDevice/Provisioning Profiles"
+
+
       - name: Build
-        run: fastlane run build_app
-      
+        run: |
+	  cd ios
+	  fastlane run build_app    
