--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         npm install
         #npx react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios
+        cd ios && pod install --repo-update && cd ..
 
     - name: install codesign
       run: |
@@ -49,11 +50,9 @@ jobs:
         #mkdir artifacts
 
         cd ios
-        pod install --repo-update
-
-        #sed -i '' 's/ProvisioningStyle = Manual;/ProvisioningStyle = Automatic;/' "$XCODE_SCHEME.xcodeproj/project.pbxproj"
 
         #xcodebuild archive -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -configuration release -archivePath "$XCODE_SCHEME.xcarchive"
         #xcodebuild archive -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" -configuration release -archivePath "$XCODE_SCHEME.xcarchive" code_sign_style="manual"
+        xcodebuild archive -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" code_sign_identity="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
         #xcodebuild build -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" code_sign_identity="" code_signing_required=no code_signing_allowed=no
-        xcodebuild build -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" code_sign_identity="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+        #xcodebuild build -project "$XCODE_SCHEME.xcodeproj" -scheme "$XCODE_SCHEME" code_sign_identity="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
